Decrease navbar font size to fix alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -101,7 +101,7 @@ body {
       margin-bottom: 0; }
     .navbar-link {
       text-transform: uppercase;
-      font-size: 11px;
+      font-size: 8px;
       font-weight: 600;
       letter-spacing: .2rem;
       margin-right: 35px;
